2002-04-04  Mike Kestner <mkestner@speakeasy.net>

	* generator/CallbackGen.cs : Unstubify.
	* generator/SymbolTable.cs : qualify some simple typenames.

2002-03-29  Mike Kestner <mkestner@speakeasy.net>

	* */makefile : add make linux target.

2002-03-29  Mike Kestner <mkestner@speakeasy.net>

	* generator/SymbolTable.cs (Trim): revamp TrimEnd call.

2002-03-28  Mike Kestner <mkestner@speakeasy.net>

	* generator/SignalHandler.cs : switch to 2.0 libs
	* generator/SymbolTable.cs : switch to 2.0 libs
	* glib/Object.cs : switch to 2.0 libs
	* glib/SList.cs : switch to 2.0 libs
	* glib/Value.cs : switch to 2.0 libs
	* gtk/Application.cs : switch to 2.0 libs

2002-03-26  Mike Kestner <mkestner@speakeasy.net>

	* generator/SignalHandler.cs : Use Path.DirectorySeparatorChar.

2002-03-25  Mike Kestner <mkestner@speakeasy.net>

	* generator/StructBase.cs : Throttle _gtk methods.
	* generator/SymbolTable.cs : tweak dll names.
	* glib/Object.cs : restructure DllImports and prop code.
	* glib/SList.cs : restructure DllImports.
	* glib/Value.cs : restructure DllImports.
	* gtk/Application.cs : overload Init() to get past the string[]
	  marshaling crash on linux.
	* sample/HelloWorld.cs : Use App::Init() since no args are needed.

2002-03-24  Mike Kestner <mkestner@speakeasy.net>

	* generator/*Gen.cs : Use Path.DirectorySeparatorChar.
	* generator/Parser.cs : better debug for unexpected types.
	* generator/SymbolTable.cs : Use linux library names.

2002-03-07  Mike Kestner <mkestner@speakeasy.net>

	* generator/CodeGenerator.cs : Refactor generatable iteration.
	* generator/SymbolTable.cs : Add Generatables property to expose 
	  complex_types.Values.

2002-03-02  Mike Kestner <mkestner@speakeasy.net>

	* makefile : add linux build.
	* generator/makefile : add linux build.

2002-02-19  Mike Kestner <mkestner@speakeasy.net>

	* generator/BoxedGen.cs : Add ctor and method generation.
	* generator/StructBase.cs : Switch to Raw syntax.