@@ -2,24 +2,25 @@
 //
 // Author: Mike Kestner <mkestner@speakeasy.net>
 //
-// (c) 2001 Mike Kestner
+// (c) 2001-2002 Mike Kestner
 
 namespace GtkSamples {
 
 	using Gtk;
 	using GtkSharp;
 	using System;
-	using System.Drawing;
 
 	public class ButtonApp  {
 
 		public static int Main (string[] args)
 		{
-			Application.Init (ref args);
+			Application.Init ();
 			Window win = new Window (WindowType.Toplevel);
 			win.Title = "Button Tester";
+			win.DefaultHeight = 120;
+			win.DefaultWidth = 160;
 			win.DeleteEvent += new EventHandler (Window_Delete);
-			Button btn = new Button ();
+			Button btn = new Button ("Click Me");
 			btn.Clicked += new EventHandler (btn_click);
 			win.EmitAdd (btn);
 			win.ShowAll ();
