@@ -1,3 +1,7 @@
+2002-04-09  Mike Kestner <mkestner@speakeasy.net>
+
+	* sample/ButtonApp.cs : Get it to run on linux.
+
 2002-04-04  Mike Kestner <mkestner@speakeasy.net>
 
 	* generator/CallbackGen.cs : Unstubify.
